// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comp4 should match snapshot 1`] = `
<v-list-stub>
  <v-list-tile-stub
    activeclass="primary--text"
  >
    <v-list-tile-action-stub>
      
      1
    
    </v-list-tile-action-stub>
     
    <v-list-tile-content-stub>
      <v-list-tile-title-stub>
        Learn JavaScript
      </v-list-tile-title-stub>
       
      <v-list-tile-sub-title-stub>
        Learn JavaScript
      </v-list-tile-sub-title-stub>
    </v-list-tile-content-stub>
  </v-list-tile-stub>
  <v-list-tile-stub
    activeclass="primary--text"
  >
    <v-list-tile-action-stub>
      
      2
    
    </v-list-tile-action-stub>
     
    <v-list-tile-content-stub>
      <v-list-tile-title-stub>
        Learn Vue
      </v-list-tile-title-stub>
       
      <v-list-tile-sub-title-stub>
        Learn Vue
      </v-list-tile-sub-title-stub>
    </v-list-tile-content-stub>
  </v-list-tile-stub>
  <v-list-tile-stub
    activeclass="primary--text"
  >
    <v-list-tile-action-stub>
      
      3
    
    </v-list-tile-action-stub>
     
    <v-list-tile-content-stub>
      <v-list-tile-title-stub>
        Build something awesome
      </v-list-tile-title-stub>
       
      <v-list-tile-sub-title-stub>
        Build something awesome
      </v-list-tile-sub-title-stub>
    </v-list-tile-content-stub>
  </v-list-tile-stub>
</v-list-stub>
`;

exports[`comp4 should match snapshot 2`] = `
<v-list-stub>
  <v-list-tile-stub
    activeclass="primary--text"
  >
    <v-list-tile-action-stub>
      
      1
    
    </v-list-tile-action-stub>
     
    <v-list-tile-content-stub>
      <v-list-tile-title-stub>
        Learn JavaScript
      </v-list-tile-title-stub>
       
      <v-list-tile-sub-title-stub>
        Learn JavaScript
      </v-list-tile-sub-title-stub>
    </v-list-tile-content-stub>
  </v-list-tile-stub>
  <v-list-tile-stub
    activeclass="primary--text"
  >
    <v-list-tile-action-stub>
      
      2
    
    </v-list-tile-action-stub>
     
    <v-list-tile-content-stub>
      <v-list-tile-title-stub>
        Learn Vue
      </v-list-tile-title-stub>
       
      <v-list-tile-sub-title-stub>
        Learn Vue
      </v-list-tile-sub-title-stub>
    </v-list-tile-content-stub>
  </v-list-tile-stub>
  <v-list-tile-stub
    activeclass="primary--text"
  >
    <v-list-tile-action-stub>
      
      3
    
    </v-list-tile-action-stub>
     
    <v-list-tile-content-stub>
      <v-list-tile-title-stub>
        Build something awesome
      </v-list-tile-title-stub>
       
      <v-list-tile-sub-title-stub>
        Build something awesome
      </v-list-tile-sub-title-stub>
    </v-list-tile-content-stub>
  </v-list-tile-stub>
  <v-list-tile-stub
    activeclass="primary--text"
  >
    <v-list-tile-action-stub>
      
      4
    
    </v-list-tile-action-stub>
     
    <v-list-tile-content-stub>
      <v-list-tile-title-stub>
        test 4th element
      </v-list-tile-title-stub>
       
      <v-list-tile-sub-title-stub>
        test 4th element
      </v-list-tile-sub-title-stub>
    </v-list-tile-content-stub>
  </v-list-tile-stub>
</v-list-stub>
`;
